# unikraft

./: Makefile  README.md  unikraft.opam  version.mk
.github/workflows/: checkpatch.yaml  integration.yaml  version.yaml
drivers/: Config.uk
drivers/ukconsole/ns16550/: Config.uk  ns16550.c
drivers/ukconsole/vgacons/: vga.c
drivers/ukrandom/lcpu/: Config.uk  Makefile.uk  README.md  init.c
drivers/xen/: Makefile.uk
drivers/xen/9p/: Config.uk
drivers/xen/9pfront/: 9pfront.c  9pfront.h  Config.uk  Makefile.uk  exportsyms.uk
drivers/xen/blk/: Config.uk
drivers/xen/blkfront/: Config.uk  Makefile.uk  blkfront.h
drivers/xen/console/: Config.uk
drivers/xen/emg_console/: Config.uk
drivers/xen/net/: Config.uk
drivers/xen/netfront/: Config.uk  Makefile.uk  netfront.h
drivers/xen/xenbus/: Config.uk  Makefile.uk  exportsyms.uk
drivers/xen/xencons/: Config.uk  Makefile.uk  console.c  exportsyms.uk
drivers/xen/xenemgcons/: Config.uk  Makefile.uk  emg_console.c
lib/: Makefile.uk
lib/posix-fdtab/: fdtab.c
lib/posix-pipe/: pipe.c
lib/posix-process/: Config.uk  Makefile.uk  clone.c  deprecated.c  execve.c
lib/ukbinfmt/: binfmt.c
lib/ukboot/: boot.c
lib/ukconsole/: Config.uk
lib/ukfalloc/: Config.uk  exportsyms.uk  stats.c
lib/ukfallocbuddy/: fallocbuddy.c
lib/ukrandom/: Config.uk  README.md  chacha.c  random.c  swrand.h
lib/uksched/: Config.uk  stats.c
lib/ukschedcoop/: schedcoop.c
lib/vfscore/: Config.uk  main.c
plat/kvm/: Config.uk
plat/xen/: Config.uk  Linker.uk  Makefile.uk  memory.c  shutdown.c
plat/xen/arm/: setup64.c
(+28 files in other folders)
