opam-version: "2.0"
name: "unikraft"
version: "0.18.0"
synopsis: "Unikraft sources"
description: "Source package for Unikraft"
maintainer: "samuel@tarides.com"
authors: "Unikraft contributors"
license: ["BSD-3-Clause" "MIT" "GPL-2.0"]
homepage: "https://unikraft.org"
bug-reports: "https://github.com/shym/ocaml-unikraft/issues"
install: [
  ["rm" "-rf" ".github" ".gitignore"]
  ["cp" "-r" "." "%{lib}%/unikraft"]
]
dev-repo: "git+https://github.com/unikraft/unikraft.git"
